fixed layout issues for main page & cleaned the SCSS code for the layout

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -11,37 +11,10 @@ nav {
 	color: #ffffff;
 	z-index: 1;
 }
-storybusterslogo {
+
+#storybusterslogo {
 	margin: 1.5em;
-	font-size: 25em;
+	font-size: 2em;
 	font-family: "Abril Fatface", sans-serif;
 }
 
-#leftbox {
-  margin: 1.5em;
-  float:left;
-  width:30%;
-  height:300px;
-}
-#middlebox{
-  float:left;
-  width:30%;
-  height:300px;
-}
-#rightbox{
-  float:right;
-  width:30%;
-  height:300px;
-}
-h1{
-  text-align:center;
-  font-family:"Squada One";
-}
-
-container {
-  width:90%;
-  height:200px;
-  padding-top:20px;
-  padding-left:10px;
-  padding-right:10px;
-}
